SERVER-33232 _configCreateCollection should properly wait for write concern